Fix auth provider spacing

--- a/LANCommander.UI/Styles/_authentication-provider.scss
+++ b/LANCommander.UI/Styles/_authentication-provider.scss
@@ -1,19 +1,13 @@
 .authentication-provider-container {
     display: flex;
     justify-content: center;
+    margin-bottom: 16px;
 }
 
 .authentication-provider-button-group {
     display: inline-flex;
     flex-direction: column;
-
-    .authentication-provider-button {
-        margin-bottom: 16px;
-
-        &:last-child {
-            margin-bottom: 0;
-        }
-    }
+    gap: 16px;
 
     .ant-btn {
         text-align: left;
